--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     </div>
 
 
-    <div id="start" class="firstInPage second fixedBackground">
+    <div id="start" class="firstInPage fixedBackground">
         <div class="vertical2">
             <h1>How to raise a cat</h1>
 
@@ -95,7 +95,7 @@
     </div>
 
 
-    <div id="play" class="second parent">
+    <div id="play" class="parent">
         <div class="vertical3">
             <h1>Play and Exercise </h1>
             <div class="paragraph-align">
@@ -117,7 +117,7 @@
     </div>
 
 
-    <div id="Lollipop" class=" second">
+    <div id="Lollipop" >
         <div class="vertical3">
           <h1>This is my cat: Lollipop</h1>
           <div class="LollipopPicture">
